objects/Support_Partner__c/Support_Partner__c.object-meta.xml
<CustomObject>
    <label>Support Partner</label>
    <nameField>
        <displayFormat>SP-{0000}</displayFormat>
        <label>Support Partner Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Support Partners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>