objects/Support_Partner__c/fields/Account_Supported__c.field-meta.xml
<CustomField>
    <fullName>Account_Supported__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Supported</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Support Partners</relationshipLabel>
    <relationshipName>Accounts_Supported</relationshipName>
    <type>Lookup</type>
</CustomField>