objects/Support_Partner__c/fields/Deployment_Exception_Granted__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Exception_Granted__c</fullName>
    <formula>Opportunity__r.SBQQ__PrimaryQuote__r.Deployment_Exception_Granted__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deployment Exception Granted</label>
    <type>Checkbox</type>
</CustomField>