objects/Support_Partner__c/fields/L1_L2_Support_Exception_Granted__c.field-meta.xml
<CustomField>
    <fullName>L1_L2_Support_Exception_Granted__c</fullName>
    <formula>Opportunity__r.SBQQ__PrimaryQuote__r.L1_L2_Support_Exception_Granted__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>L1 L2 Support Exception Granted</label>
    <type>Checkbox</type>
</CustomField>