objects/Support_Partner__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Support Partners</relationshipLabel>
    <relationshipName>Opportunity_Support_Partners</relationshipName>
    <type>Lookup</type>
</CustomField>