objects/Support_Partner__c/fields/Oppty_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Oppty_Close_Date__c</fullName>
    <description>Created this to display Opportunity Closed Date</description>
    <formula>Opportunity__r.CloseDate</formula>
    <inlineHelpText>Opportunity Closed Date</inlineHelpText>
    <label>Oppty Close Date</label>
    <type>Date</type>
</CustomField>