objects/Support_Partner__c/fields/Partner_Accreditation__c.field-meta.xml
<CustomField>
    <fullName>Partner_Accreditation__c</fullName>
    <label>Partner Accreditation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>