objects/Support_Partner__c/fields/Partner_Business_Motion_Contains_Support__c.field-meta.xml
<CustomField>
    <fullName>Partner_Business_Motion_Contains_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partner Business Motion Contains Support</label>
    <type>Checkbox</type>
</CustomField>