objects/Support_Partner__c/fields/Support_Partner__c.field-meta.xml
<CustomField>
    <fullName>Support_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Support Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts Supported</relationshipLabel>
    <relationshipName>Account_Support_Partners</relationshipName>
    <type>Lookup</type>
</CustomField>